[package]
name = "uchrono"
version = "0.1.1"
edition = "2021"
description = "A no_std compatible time point and duration library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndWass/uchrono"
keywords = ["time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["lazy_static"]

[dependencies]
lazy_static = {  version="1.4.0", optional = true }